load("@buildifier_prebuilt//:rules.bzl", "buildifier")

buildifier(
    name = "format_check",
    diff_command = "diff",
    # Exclude vendored googletest instance from format checks
    exclude_patterns = ["./libs/3rdparty/googletest/**"],
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "format_fix",
    # Exclude vendored googletest instance from format checks
    exclude_patterns = ["./libs/3rdparty/googletest/**"],
    lint_mode = "fix",
    mode = "fix",
)
