# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

alias(
    name = "lwip_sys_arch_default",
    actual = select(
        {
            "//bazel/platform/constraints/soc:s32k148": "//platforms/s32k1xx/lwipSysArch:lwip_sys_arch",
            "@platforms//os:linux": "//platforms/posix/lwipSysArch:lwip_sys_arch",
        },
        no_match_error = "No lwip sys_arch for this platform. Override --//libs/3rdparty/lwip:lwip_configuration with your own implementation.",
    ),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lwip_configuration",
    srcs = ["src/rng.cpp"],
    hdrs = [
        "include/lwipopts.h",
        "include/rng.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":lwip_sys_arch_default",
        "//libs/3rdparty/etl",
        "//libs/bsw/platform",
    ],
)
