# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "transport_configuration",
    srcs = ["src/transport/TransportConfiguration.cpp"],
    hdrs = ["include/transport/TransportConfiguration.h"],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//executables/referenceApp/configuration",
        "//libs/3rdparty/etl",
        "//libs/bsw/transport",
    ],
)
