# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "uds_configuration",
    hdrs = [
        "include/uds/DummySessionPersistence.h",
        "include/uds/UdsConfig.h",
        "include/uds/UdsLifecycleConnector.h",
        "include/uds/session/DiagSession.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/bsw/common:common_headers",
        "//libs/bsw/uds:uds_headers",
    ],
)

cc_library(
    name = "uds_configuration_impl",
    srcs = ["src/uds/session/DiagSession.cpp"],
    implementation_deps = ["//libs/bsw/uds"],
    visibility = ["//visibility:public"],
    deps = [":uds_configuration"],
)
