# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

alias(
    name = "async_rtos_impl_default",
    actual = select(
        {
            "//bazel/config/rtos:support_freertos": "//libs/bsw/asyncFreeRtos:async_freertos_impl",
            "//bazel/config/rtos:support_threadx": "//libs/bsw/asyncThreadX:async_threadx_impl",
        },
        no_match_error = "async_rtos_impl: build with --//bazel/config/rtos=freertos or --//bazel/config/rtos=threadx, or override --//libs/bsw/async:async_rtos_impl.",
    ),
)

# Async compiled RTOS implementation
#   Default:  select based on //bazel/config/rtos
#   Override: --//libs/bsw/async:async_rtos_impl=//path/to:your_rtos_impl
label_flag(
    name = "async_rtos_impl",
    build_setting_default = ":async_rtos_impl_default",
    visibility = ["//visibility:public"],
)

alias(
    name = "async_platform_default",
    actual = select(
        {
            "//bazel/config/rtos:support_freertos": "//libs/bsw/asyncFreeRtos:async_freertos",
            "//bazel/config/rtos:support_threadx": "//libs/bsw/asyncThreadX:async_threadx",
        },
        no_match_error = "async: build with --//bazel/config/rtos=freertos or --//bazel/config/rtos=threadx, or override --//libs/bsw/async:async_platform.",
    ),
)

# Async platform implementation (the RTOS adapter the async layer binds to).
#   Default:  select based on //bazel/config/rtos
#   Override: --//libs/bsw/async:async_platform=//path/to:your_async_platform
label_flag(
    name = "async_platform",
    build_setting_default = ":async_platform_default",
    visibility = ["//visibility:public"],
)

# Async binding (provides the RTOS-support define and runtime binding for the async layer).
#   Default:  referenceApp binding (hardcoded until unit_test build is migrated to Bazel)
#   Override: --//libs/bsw/async:async_binding=//path/to:your_binding
# TODO: Select async_binding based on executable_config once the unit_test build is migrated.
label_flag(
    name = "async_binding",
    build_setting_default = "//executables/referenceApp/asyncBinding:async_binding",
    visibility = ["//visibility:public"],
)

# Circular dependency present on the CMake side: async -> asyncBinding -> runtime -> async
# Split off async_headers (async's headers + async_platform, without async_binding) to break the
# circular dependency for Bazel.
cc_library(
    name = "async_headers",
    hdrs = [
        "include/async/Async.h",
        "include/async/util/Call.h",
        "include/async/util/MemberCall.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        ":async_platform",
        "//libs/3rdparty/etl",
    ],
)

cc_library(
    name = "async",
    visibility = ["//visibility:public"],
    deps = [
        ":async_binding",
        ":async_headers",
    ],
)
