# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "async_console",
    srcs = [
        "src/console/AsyncCommandWrapper.cpp",
        "src/console/AsyncConsole.cpp",
        "src/console/SyncCommandWrapper.cpp",
        "src/logger/ConsoleLogger.cpp",
    ],
    hdrs = [
        "include/console/AsyncCommandWrapper.h",
        "include/console/AsyncConsole.h",
        "include/console/SyncCommandWrapper.h",
        "include/logger/ConsoleLogger.h",
    ],
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/bsw/async",
        "//libs/bsw/util",
    ],
)
