# *******************************************************************************
# Copyright (c) 2026 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load("@rules_cc//cc:cc_library.bzl", "cc_library")

alias(
    name = "freertos_core_configuration_default",
    actual = select(
        {
            "//bazel/platform/constraints:s32k148": "//executables/referenceApp/platforms/s32k148evb/freeRtosCoreConfiguration:freertos_core_configuration",
            "@platforms//os:linux": "//executables/referenceApp/platforms/posix/freeRtosCoreConfiguration:freertos_core_configuration",
        },
        no_match_error = "No FreeRTOS core configuration for this platform. Override --//libs/bsw/asyncFreeRtos:freertos_core_configuration with your own configuration target.",
    ),
)

# FreeRTOS core configuration (FreeRtosPlatformConfig.h and platform wiring).
#   Default:  select based on the target platform (S32K148, POSIX)
#   Override: --//libs/bsw/asyncFreeRtos:freertos_core_configuration=//path/to:your_config
label_flag(
    name = "freertos_core_configuration",
    build_setting_default = ":freertos_core_configuration_default",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "freertos_configuration",
    hdrs = [
        "freeRtosConfiguration/FreeRTOSConfig.h",
        "freeRtosConfiguration/async/Hook.h",
        "freeRtosConfiguration/freertos_tasks_c_additions.h",
    ],
    strip_include_prefix = "freeRtosConfiguration",
    visibility = ["//visibility:public"],
    deps = [
        ":freertos_core_configuration",
        "//executables/referenceApp/asyncCoreConfiguration:async_core_configuration",
        "//libs/bsw/platform",
    ],
)
